<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navi_home"
        android:icon="@drawable/ic_baseline_home_24_black"
        android:title="@string/home"/>
    <item
        android:id="@+id/navi_patient_info"
        android:icon="@drawable/ic_baseline_airline_seat_individual_suite_24_black"
        android:title="@string/patient_data"/>
    <item
        android:id="@+id/navi_qr_reading"
        android:icon="@drawable/ic_baseline_qr_code_2_24_black"
        android:title="@string/qr_reading"/>
    <item
        android:id="@+id/navi_support"
        android:icon="@drawable/ic_baseline_support_agent_24_black"
        android:title="@string/support"/>
    <item
        android:id="@+id/navi_setting"
        android:icon="@drawable/ic_baseline_settings_24_black"
        android:title="@string/setting"/>
</menu>