<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.SoundMeasurementFragment">

        <TextView
            android:id="@+id/tvWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/waiting"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWaiting" />

        <Button
            android:id="@+id/btCalculateAverageSound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calculate_average"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btRec" />

        <Button
            android:id="@+id/btSoundMeasurementToVentilatorResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_to_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSoundMeasurementToManualMeasurement" />

        <Button
            android:id="@+id/btSoundMeasurementToManualMeasurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_to_manual_measurement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAverageExhalationTime" />

        <TextView
            android:id="@+id/tvAverageInhalationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/average_inhalation_time"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btCalculateAverageSound" />

        <TextView
            android:id="@+id/tvAverageInhalationTimeValueSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toEndOf="@+id/tvAverageInhalationTime"
            app:layout_constraintTop_toTopOf="@+id/tvAverageInhalationTime" />

        <TextView
            android:id="@+id/tvAverageExhalationTimeValueSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toEndOf="@+id/tvAverageExhalationTime"
            app:layout_constraintTop_toTopOf="@+id/tvAverageExhalationTime" />

        <TextView
            android:id="@+id/tvAverageExhalationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/average_exhalation_time"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAverageInhalationTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>