<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.VentilatorSettingFragment">

        <EditText
            android:id="@+id/etO2Flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberSigned|text"
            android:textSize="@dimen/et_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAirFlow2" />

        <TextView
            android:id="@+id/tvRequired3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/required"
            android:textSize="@dimen/tv_text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvAirFlow2"
            app:layout_constraintStart_toEndOf="@+id/tvAirFlow2" />

        <TextView
            android:id="@+id/tvRequired4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/required"
            android:textSize="@dimen/tv_text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvConditionCheck"
            app:layout_constraintStart_toEndOf="@+id/tvConditionCheck" />

        <TextView
            android:id="@+id/tvAirFlow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/o2_flow_label"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAirFlow" />

        <TextView
            android:id="@+id/tvPatientData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin_top"
            android:text="@string/patient_data"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvVentilatorSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ventilator_setting"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPredictedVt" />

        <TextView
            android:id="@+id/tvCalculatedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculated_value"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etO2Flow" />

        <TextView
            android:id="@+id/tvConditionCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/condition_check"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEstimatedPeep" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/height_key"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPatientData" />

        <TextView
            android:id="@+id/tvAirwayPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/airway_pressure_label"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVentilatorSetting" />

        <TextView
            android:id="@+id/tvFio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fio2_key"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCalculatedValue" />

        <TextView
            android:id="@+id/tvFiO2Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toEndOf="@+id/tvFio2"
            app:layout_constraintTop_toTopOf="@+id/tvFio2" />

        <TextView
            android:id="@+id/tvFiO2Value2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toEndOf="@+id/tvEstimatedPeep"
            app:layout_constraintTop_toTopOf="@+id/tvEstimatedPeep" />

        <TextView
            android:id="@+id/tvEstimatedPeep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/estimated_peep_key"
            android:textSize="@dimen/tv_text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFio2" />

        <TextView
            android:id="@+id/tvAirFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/air_flow_label"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAirwayPressure" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender_key"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

        <TextView
            android:id="@+id/tvPredictedVt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/predicted_vt_key"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvHeightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toEndOf="@+id/tvHeight"
            app:layout_constraintTop_toTopOf="@+id/tvHeight" />

        <TextView
            android:id="@+id/tvGenderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toEndOf="@+id/tvGender"
            app:layout_constraintTop_toTopOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvGenderValue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="@dimen/tv_text_size"
            app:layout_constraintStart_toEndOf="@+id/tvPredictedVt"
            app:layout_constraintTop_toTopOf="@+id/tvPredictedVt" />

        <EditText
            android:id="@+id/etAirwayPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberSigned|text"
            android:textSize="@dimen/et_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAirwayPressure" />

        <EditText
            android:id="@+id/etAirFlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberSigned|text"
            android:textSize="@dimen/et_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAirFlow" />

        <TextView
            android:id="@+id/tvRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/required"
            android:textSize="@dimen/tv_text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvAirwayPressure"
            app:layout_constraintStart_toEndOf="@+id/tvAirwayPressure" />

        <TextView
            android:id="@+id/tvRequired2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/required"
            android:textSize="@dimen/tv_text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvAirFlow"
            app:layout_constraintStart_toEndOf="@+id/tvAirFlow" />

        <CheckBox
            android:id="@+id/cbValidSpo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_spo2"
            android:textSize="@dimen/cb_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbValidRr" />

        <CheckBox
            android:id="@+id/cbValidRr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_rr"
            android:textSize="@dimen/cb_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConditionCheck" />

        <Button
            android:id="@+id/btVentilatorSettingToSoundMeasurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sound_measurement"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbValidSpo2" />

        <Button
            android:id="@+id/btVentilatorSettingToManualMeasurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/manual_measurement"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btVentilatorSettingToSoundMeasurement" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>